# playerpokerbot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: stack-trace-debugger.md  tdd-architect.md
docs/: browser-poker-spec.md  eval-spec.md
notebooks/: poker_eval.ipynb  poker_simulation.ipynb  poker_tournament.ipynb
scripts/: play.py  test_server.py
server/: __init__.py  config.py  main.py  websocket_manager.py
server/api/: __init__.py  routes.py  websocket.py
server/game/: __init__.py  engine.py  session.py  timer.py
server/models/: __init__.py  api.py  events.py  game.py
server/streaming/: __init__.py  ollama_client.py  token_batcher.py
src/: __init__.py  actions.py  cards.py  game.py  logger.py  players.py
src/eval/: __init__.py  config.py  game.py  hardware.py  metrics.py  observability.py  openai_player.py  prompt_builder.py  transformers_player.py
tests/: conftest.py  test_actions.py  test_game.py  test_players.py
tests/server_tests/: test_engine.py  test_models.py  test_ollama_client.py  test_routes.py  test_session.py  test_timer.py  test_token_batcher.py  test_websocket_manager.py
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/game/: ActionPanel.tsx  Card.tsx  GameSetup.tsx  PlayerSeat.tsx  PokerTable.tsx  ThinkingBubble.tsx  TurnTimer.tsx  WinnerOverlay.tsx  index.ts
web/src/hooks/: useWebSocket.ts
web/src/store/: gameStore.ts
web/src/types/: index.ts
